[gd_scene load_steps=26 format=3 uid="uid://dv80q7jwkx20r"]

[ext_resource type="Script" path="res://scenes/debug/debug.gd" id="1_nyx4n"]
[ext_resource type="Texture2D" uid="uid://bqg5mce5g6jx5" path="res://assets/textures/Kenney/2D assets/Game Icons/PNG/Black/1x/buttonA.png" id="2_fbawl"]
[ext_resource type="Texture2D" uid="uid://cfhtih5uraw25" path="res://assets/textures/Kenney/2D assets/Game Icons/PNG/Black/1x/buttonB.png" id="3_bf0qu"]
[ext_resource type="Texture2D" uid="uid://d1iarlmlwx78" path="res://assets/textures/Kenney/2D assets/Game Icons/PNG/Black/1x/buttonX.png" id="4_oh1iv"]
[ext_resource type="Texture2D" uid="uid://jnqodp7g35l7" path="res://assets/textures/Kenney/2D assets/Game Icons/PNG/Black/1x/buttonY.png" id="5_tp2mo"]
[ext_resource type="Texture2D" uid="uid://vbes4cuhvvo2" path="res://assets/textures/Kenney/2D assets/Game Icons/PNG/Black/1x/buttonL1.png" id="6_ufh1b"]
[ext_resource type="Texture2D" uid="uid://s1n8rlhu3g6s" path="res://assets/textures/Kenney/2D assets/Game Icons/PNG/Black/1x/buttonL2.png" id="7_g1jgn"]
[ext_resource type="Texture2D" uid="uid://cd3f5n1m8062w" path="res://assets/textures/Kenney/2D assets/Game Icons/PNG/Black/1x/buttonR1.png" id="8_o606g"]
[ext_resource type="Texture2D" uid="uid://c103xw5srswic" path="res://assets/textures/Kenney/2D assets/Game Icons/PNG/Black/1x/buttonR2.png" id="9_w8w7o"]
[ext_resource type="Texture2D" uid="uid://dbpqjlsonbv2" path="res://assets/textures/Kenney/2D assets/Game Icons/PNG/Black/1x/buttonSelect.png" id="10_hi5tw"]
[ext_resource type="Texture2D" uid="uid://do1ab0t5smmvm" path="res://assets/textures/Kenney/2D assets/Game Icons/PNG/Black/1x/buttonStart.png" id="11_ngph4"]
[ext_resource type="Texture2D" uid="uid://88n8wj1fa7nm" path="res://assets/textures/Kenney/2D assets/Game Icons/PNG/Black/2x/target.png" id="12_edgb2"]
[ext_resource type="Texture2D" uid="uid://blc16mdr82l4t" path="res://assets/textures/Kenney/2D assets/Game Icons/PNG/Black/2x/plus.png" id="13_77uqr"]
[ext_resource type="Texture2D" uid="uid://trl1dvea5ks4" path="res://assets/textures/Kenney/2D assets/Game Icons/PNG/White/1x/buttonA.png" id="14_c0yct"]
[ext_resource type="Texture2D" uid="uid://b168xqj8lgfar" path="res://assets/textures/Kenney/2D assets/Game Icons/PNG/White/1x/buttonB.png" id="15_4ghtc"]
[ext_resource type="Texture2D" uid="uid://b5kiseccap4v6" path="res://assets/textures/Kenney/2D assets/Game Icons/PNG/White/1x/buttonX.png" id="16_gdap7"]
[ext_resource type="Texture2D" uid="uid://uoinapmbv02k" path="res://assets/textures/Kenney/2D assets/Game Icons/PNG/White/1x/buttonY.png" id="17_nyfs6"]
[ext_resource type="Texture2D" uid="uid://cach33nduwymm" path="res://assets/textures/Kenney/2D assets/Game Icons/PNG/White/1x/buttonL1.png" id="18_qcc84"]
[ext_resource type="Texture2D" uid="uid://cw1oulvjvcrpi" path="res://assets/textures/Kenney/2D assets/Game Icons/PNG/White/1x/buttonL2.png" id="19_op37c"]
[ext_resource type="Texture2D" uid="uid://7c2jjd1ona4w" path="res://assets/textures/Kenney/2D assets/Game Icons/PNG/White/1x/buttonR1.png" id="20_b634t"]
[ext_resource type="Texture2D" uid="uid://wed5dfqw0f3w" path="res://assets/textures/Kenney/2D assets/Game Icons/PNG/White/1x/buttonR2.png" id="21_n5awx"]
[ext_resource type="Texture2D" uid="uid://chab6e6823mdx" path="res://assets/textures/Kenney/2D assets/Game Icons/PNG/White/1x/buttonSelect.png" id="22_o6b7t"]
[ext_resource type="Texture2D" uid="uid://djw3i7m5a5t0t" path="res://assets/textures/Kenney/2D assets/Game Icons/PNG/White/1x/buttonStart.png" id="23_vwva8"]
[ext_resource type="Texture2D" uid="uid://ceen7jdan3txn" path="res://assets/textures/Kenney/2D assets/Game Icons/PNG/White/2x/target.png" id="24_rel5q"]
[ext_resource type="Texture2D" uid="uid://dwbucuwoed2qg" path="res://assets/textures/Kenney/2D assets/Game Icons/PNG/White/2x/plus-1.png" id="25_ienfy"]

[node name="Debug" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nyx4n")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 216.0
offset_bottom = 410.0

[node name="Label1" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 9.0
offset_right = 169.0
offset_bottom = 23.0
text = "enable_double_jump"

[node name="CheckBox1" type="CheckBox" parent="Panel"]
layout_mode = 0
offset_left = 192.0
offset_right = 216.0
offset_bottom = 24.0

[node name="Label2" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 9.0
offset_top = 24.0
offset_right = 179.0
offset_bottom = 47.0
text = "enable_flying"

[node name="CheckBox2" type="CheckBox" parent="Panel"]
layout_mode = 0
offset_left = 192.0
offset_top = 24.0
offset_right = 216.0
offset_bottom = 48.0

[node name="Label3" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 9.0
offset_top = 48.0
offset_right = 179.0
offset_bottom = 71.0
text = "enable_vibration"

[node name="CheckBox3" type="CheckBox" parent="Panel"]
layout_mode = 0
offset_left = 192.0
offset_top = 48.0
offset_right = 216.0
offset_bottom = 72.0

[node name="Label4" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 9.0
offset_top = 96.0
offset_right = 179.0
offset_bottom = 119.0
text = "is_animation_locked"

[node name="CheckBox4" type="CheckBox" parent="Panel"]
layout_mode = 0
offset_left = 192.0
offset_top = 96.0
offset_right = 216.0
offset_bottom = 120.0

[node name="Label5" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 9.0
offset_top = 120.0
offset_right = 179.0
offset_bottom = 143.0
text = "is_crouching"

[node name="CheckBox5" type="CheckBox" parent="Panel"]
layout_mode = 0
offset_left = 192.0
offset_top = 120.0
offset_right = 216.0
offset_bottom = 144.0

[node name="Label6" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 9.0
offset_top = 144.0
offset_right = 179.0
offset_bottom = 167.0
text = "is_double_jumping"

[node name="CheckBox6" type="CheckBox" parent="Panel"]
layout_mode = 0
offset_left = 192.0
offset_top = 144.0
offset_right = 216.0
offset_bottom = 168.0

[node name="Label7" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 9.0
offset_top = 168.0
offset_right = 169.0
offset_bottom = 191.0
text = "is_flying"

[node name="CheckBox7" type="CheckBox" parent="Panel"]
layout_mode = 0
offset_left = 192.0
offset_top = 168.0
offset_right = 216.0
offset_bottom = 192.0

[node name="Label8" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 9.0
offset_top = 192.0
offset_right = 179.0
offset_bottom = 215.0
text = "is_hanging"

[node name="CheckBox8" type="CheckBox" parent="Panel"]
layout_mode = 0
offset_left = 192.0
offset_top = 192.0
offset_right = 216.0
offset_bottom = 216.0

[node name="Label9" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 9.0
offset_top = 216.0
offset_right = 179.0
offset_bottom = 239.0
text = "is_jumping"

[node name="CheckBox9" type="CheckBox" parent="Panel"]
layout_mode = 0
offset_left = 192.0
offset_top = 216.0
offset_right = 216.0
offset_bottom = 240.0

[node name="Label10" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 9.0
offset_top = 240.0
offset_right = 169.0
offset_bottom = 263.0
text = "is_kicking_left"

[node name="CheckBox10" type="CheckBox" parent="Panel"]
layout_mode = 0
offset_left = 192.0
offset_top = 240.0
offset_right = 216.0
offset_bottom = 264.0

[node name="Label11" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 9.0
offset_top = 264.0
offset_right = 169.0
offset_bottom = 287.0
text = "is_kicking_right"

[node name="CheckBox11" type="CheckBox" parent="Panel"]
layout_mode = 0
offset_left = 192.0
offset_top = 264.0
offset_right = 216.0
offset_bottom = 288.0

[node name="Label12" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 9.0
offset_top = 288.0
offset_right = 179.0
offset_bottom = 311.0
text = "is_punching_left"

[node name="CheckBox12" type="CheckBox" parent="Panel"]
layout_mode = 0
offset_left = 192.0
offset_top = 288.0
offset_right = 216.0
offset_bottom = 312.0

[node name="Label13" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 9.0
offset_top = 312.0
offset_right = 179.0
offset_bottom = 335.0
text = "is_punching_right"

[node name="CheckBox13" type="CheckBox" parent="Panel"]
layout_mode = 0
offset_left = 192.0
offset_top = 312.0
offset_right = 216.0
offset_bottom = 336.0

[node name="Label14" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 9.0
offset_top = 336.0
offset_right = 179.0
offset_bottom = 359.0
text = "is_sprinting"

[node name="CheckBox14" type="CheckBox" parent="Panel"]
layout_mode = 0
offset_left = 192.0
offset_top = 336.0
offset_right = 216.0
offset_bottom = 360.0

[node name="Label15" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 9.0
offset_top = 384.0
offset_right = 179.0
offset_bottom = 407.0
text = "game_paused"

[node name="CheckBox15" type="CheckBox" parent="Panel"]
layout_mode = 0
offset_left = 192.0
offset_top = 384.0
offset_right = 216.0
offset_bottom = 408.0

[node name="XboxController" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Black" type="Control" parent="XboxController"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ButtonA" type="TextureRect" parent="XboxController/Black"]
layout_mode = 0
offset_left = 1179.0
offset_top = 620.0
offset_right = 1229.0
offset_bottom = 670.0
texture = ExtResource("2_fbawl")

[node name="ButtonB" type="TextureRect" parent="XboxController/Black"]
layout_mode = 0
offset_left = 1211.0
offset_top = 588.0
offset_right = 1261.0
offset_bottom = 638.0
texture = ExtResource("3_bf0qu")

[node name="ButtonX" type="TextureRect" parent="XboxController/Black"]
layout_mode = 0
offset_left = 1147.0
offset_top = 588.0
offset_right = 1197.0
offset_bottom = 638.0
texture = ExtResource("4_oh1iv")

[node name="ButtonY" type="TextureRect" parent="XboxController/Black"]
layout_mode = 0
offset_left = 1179.0
offset_top = 556.0
offset_right = 1229.0
offset_bottom = 606.0
texture = ExtResource("5_tp2mo")

[node name="ButtonL1" type="TextureRect" parent="XboxController/Black"]
layout_mode = 0
offset_left = 925.0
offset_top = 548.0
offset_right = 975.0
offset_bottom = 598.0
texture = ExtResource("6_ufh1b")

[node name="ButtonL2" type="TextureRect" parent="XboxController/Black"]
layout_mode = 0
offset_left = 925.0
offset_top = 516.0
offset_right = 975.0
offset_bottom = 566.0
texture = ExtResource("7_g1jgn")

[node name="ButtonR1" type="TextureRect" parent="XboxController/Black"]
layout_mode = 0
offset_left = 1230.0
offset_top = 548.0
offset_right = 1280.0
offset_bottom = 598.0
texture = ExtResource("8_o606g")

[node name="ButtonR2" type="TextureRect" parent="XboxController/Black"]
layout_mode = 0
offset_left = 1230.0
offset_top = 516.0
offset_right = 1280.0
offset_bottom = 566.0
texture = ExtResource("9_w8w7o")

[node name="ButtonSelect" type="TextureRect" parent="XboxController/Black"]
layout_mode = 0
offset_left = 1059.0
offset_top = 588.0
offset_right = 1109.0
offset_bottom = 638.0
scale = Vector2(0.75, 0.75)
texture = ExtResource("10_hi5tw")

[node name="ButtonStart" type="TextureRect" parent="XboxController/Black"]
layout_mode = 0
offset_left = 1107.0
offset_top = 588.0
offset_right = 1157.0
offset_bottom = 638.0
scale = Vector2(0.75, 0.75)
texture = ExtResource("11_ngph4")

[node name="StickR" type="TextureRect" parent="XboxController/Black"]
layout_mode = 0
offset_left = 1107.0
offset_top = 628.0
offset_right = 1207.0
offset_bottom = 728.0
texture = ExtResource("12_edgb2")

[node name="StickL" type="TextureRect" parent="XboxController/Black"]
layout_mode = 0
offset_left = 955.0
offset_top = 564.0
offset_right = 1055.0
offset_bottom = 664.0
texture = ExtResource("12_edgb2")

[node name="DPad" type="TextureRect" parent="XboxController/Black"]
layout_mode = 0
offset_left = 1003.0
offset_top = 628.0
offset_right = 1103.0
offset_bottom = 728.0
texture = ExtResource("13_77uqr")

[node name="White" type="Control" parent="XboxController"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ButtonA" type="TextureRect" parent="XboxController/White"]
layout_mode = 0
offset_left = 1179.0
offset_top = 620.0
offset_right = 1229.0
offset_bottom = 670.0
texture = ExtResource("14_c0yct")

[node name="ButtonB" type="TextureRect" parent="XboxController/White"]
layout_mode = 0
offset_left = 1211.0
offset_top = 588.0
offset_right = 1261.0
offset_bottom = 638.0
texture = ExtResource("15_4ghtc")

[node name="ButtonX" type="TextureRect" parent="XboxController/White"]
layout_mode = 0
offset_left = 1147.0
offset_top = 588.0
offset_right = 1197.0
offset_bottom = 638.0
texture = ExtResource("16_gdap7")

[node name="ButtonY" type="TextureRect" parent="XboxController/White"]
layout_mode = 0
offset_left = 1179.0
offset_top = 556.0
offset_right = 1229.0
offset_bottom = 606.0
texture = ExtResource("17_nyfs6")

[node name="ButtonL1" type="TextureRect" parent="XboxController/White"]
layout_mode = 0
offset_left = 925.0
offset_top = 548.0
offset_right = 975.0
offset_bottom = 598.0
texture = ExtResource("18_qcc84")

[node name="ButtonL2" type="TextureRect" parent="XboxController/White"]
layout_mode = 0
offset_left = 925.0
offset_top = 516.0
offset_right = 975.0
offset_bottom = 566.0
texture = ExtResource("19_op37c")

[node name="ButtonR1" type="TextureRect" parent="XboxController/White"]
layout_mode = 0
offset_left = 1230.0
offset_top = 548.0
offset_right = 1280.0
offset_bottom = 598.0
texture = ExtResource("20_b634t")

[node name="ButtonR2" type="TextureRect" parent="XboxController/White"]
layout_mode = 0
offset_left = 1230.0
offset_top = 516.0
offset_right = 1280.0
offset_bottom = 566.0
texture = ExtResource("21_n5awx")

[node name="ButtonSelect" type="TextureRect" parent="XboxController/White"]
layout_mode = 0
offset_left = 1059.0
offset_top = 588.0
offset_right = 1109.0
offset_bottom = 638.0
scale = Vector2(0.75, 0.75)
texture = ExtResource("22_o6b7t")

[node name="ButtonStart" type="TextureRect" parent="XboxController/White"]
layout_mode = 0
offset_left = 1107.0
offset_top = 588.0
offset_right = 1157.0
offset_bottom = 638.0
scale = Vector2(0.75, 0.75)
texture = ExtResource("23_vwva8")

[node name="StickR" type="TextureRect" parent="XboxController/White"]
layout_mode = 0
offset_left = 1107.0
offset_top = 628.0
offset_right = 1207.0
offset_bottom = 728.0
texture = ExtResource("24_rel5q")

[node name="StickL" type="TextureRect" parent="XboxController/White"]
layout_mode = 0
offset_left = 955.0
offset_top = 564.0
offset_right = 1055.0
offset_bottom = 664.0
texture = ExtResource("24_rel5q")

[node name="DPadUp" type="TextureRect" parent="XboxController/White"]
layout_mode = 0
offset_left = 1003.0
offset_top = 628.0
offset_right = 1103.0
offset_bottom = 728.0
texture = ExtResource("25_ienfy")

[node name="DPadDown" type="TextureRect" parent="XboxController/White"]
layout_mode = 0
offset_left = 1003.0
offset_top = 628.0
offset_right = 1103.0
offset_bottom = 728.0
texture = ExtResource("25_ienfy")
flip_v = true

[node name="DPadLeft" type="TextureRect" parent="XboxController/White"]
layout_mode = 0
offset_left = 1103.0
offset_top = 628.0
offset_right = 1203.0
offset_bottom = 728.0
rotation = 1.57079
texture = ExtResource("25_ienfy")
flip_h = true
flip_v = true

[node name="DPadRight" type="TextureRect" parent="XboxController/White"]
layout_mode = 0
offset_left = 1103.0
offset_top = 628.0
offset_right = 1203.0
offset_bottom = 728.0
rotation = 1.57079
texture = ExtResource("25_ienfy")
